Fixed style layout on smaller devices and resolutions.

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -206,6 +206,7 @@ footer {
     border-width:1px 0;
     padding:20px 0;
     margin:0 0 20px;
+	width: 65%;
   }
   
   header a small {
@@ -214,8 +215,38 @@ footer {
   
   header ul {
     position:absolute;
-    right:50px;
-    top:52px;
+    right:10px;
+  }
+  
+  header h2 {
+	position: absolute;
+  }
+  
+  header h2.source {
+	top: 180px;
+	right: 210px;
+  }
+  
+  header ul.source {
+	top: 210px;
+  }
+  
+  header h2.angryboids {
+	top: 270px;
+	right: 86px;
+  }
+  
+  header ul.angryboids {
+	top: 300px;
+  }
+  
+  header h2.seasons {
+	top: 360px;
+	right: 126px;
+  }
+  
+  header ul.seasons {
+	top: 390px;
   }
 }
 
@@ -228,7 +259,7 @@ footer {
     padding:0;
   }
   
-  header ul, header p.view {
+  header ul, header h2, header p.view {
     position:static;
   }
   
